--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-		"bower-asset/clipboard":"*"
+		"bower-asset/clipboard":"*",
+		"bower-asset/angular": "*",
+		"bower-asset/pace": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
