--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,16 @@
         "yiisoft/yii2-swiftmailer": "*",
 		"bower-asset/clipboard":"*",
 		"bower-asset/angular": "*",
-		"bower-asset/pace": "*"
+		"bower-asset/pace": "*",
+		"mdmsoft/yii2-admin": "~2.0",
+        "dektrium/yii2-user": "0.9.*@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+		"c006/yii2-migration-utility": "dev-master"
     },
     "config": {
         "process-timeout": 1800
