--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,4 +16,4 @@ pipelines:
           script:
             - apt-get update
             - apt-get -qq install git-ftp
-            - git ftp init --user $FTP_USERNAME --passwd $FTP_PASSWORD ftp://dharmabean.com/
+            - git ftp push --user $FTP_USERNAME --passwd $FTP_PASSWORD ftp://dharmabean.com/
