--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		"bower-asset/angular": "*",
 		"bower-asset/pace": "*",
 		"mdmsoft/yii2-admin": "~2.0",
-        "dektrium/yii2-user": "0.9.*@dev"
+        "dektrium/yii2-user": "0.9.*@dev",
+        "sastrawi/sastrawi": "^1"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
